--- a/kakaoMap3.html
+++ b/kakaoMap3.html
@@ -15,7 +15,7 @@
     </div>
     <br>
 
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a8952a8c0839d744df24ec8dcaf7c532&libraries=services"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={APP_KEY}&libraries=services"></script>
 <script src="./kakaoMap3.js"></script>
 </body>
 </html>
