--- a/kakaoMap2.html
+++ b/kakaoMap2.html
@@ -11,7 +11,7 @@
 <body>
 <div id="map" style="width:100%;height:350px;"></div>
 
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a8952a8c0839d744df24ec8dcaf7c532"></script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={APP_KEY}"></script>
 <script src="./kakaoMap2.js"></script>
 </body>
 </html>
